Fix TicketBox z-index

--- a/src/components/Ticketbox/Ticketbox.scss
+++ b/src/components/Ticketbox/Ticketbox.scss
@@ -4,6 +4,7 @@
     position: fixed;
     right: 20px;
     bottom: 20px;
+    z-index: $z-modal;
 }
 
 .ticketbox-btn--main {
